# frank-video

./: CMakeLists.txt  README.md  build.sh  flash.sh  release.sh
drivers/: HDMI.c  HDMI.h  psram_allocator.c  usbhid_wrapper.h
drivers/hdmi_hstx/: HDMI_hstx.c  HDMI_hstx_audio.c  hstx_data_island_queue.c  hstx_data_island_queue.h  hstx_packet.c  video_output.c
drivers/i2s/: i2s_audio.c  i2s_audio.h
drivers/ps2kbd/: CMakeLists.txt  ps2kbd_wrapper.cpp  ps2kbd_wrapper.h
drivers/usbhid/: CMakeLists.txt  hid_app.c  tusb_config.h  usbhid_wrapper.c
sdcard/: sample.mpg
src/: board_config.h  file_browser.c  file_browser.h  main.c  pl_mpeg.h  player.c  player.h
src/fatfs/: ffsystem.c
tools/: convert_video.sh
